Dino and ELK updates

--- a/ELK/ELK.conf
+++ b/ELK/ELK.conf
@@ -20,6 +20,37 @@ input
     type => "meraki"
     port => "7514"
   }
+  lumberjack
+  {
+     port => 5000
+     ssl_certificate => "/home/administrator/server.crt"
+     ssl_key => "/home/administrator/server.key"
+     type => "syslog-cisco"
+  }
+  lumberjack
+  {
+     port => 5001
+     ssl_certificate => "/home/administrator/server.crt"
+     ssl_key => "/home/administrator/server.key"
+     type => "cisco-asa"
+  }
+  lumberjack
+  {
+     port => 5002
+     ssl_certificate => "/home/administrator/server.crt"
+     ssl_key => "/home/administrator/server.key"
+     type => "meraki"
+  }
+  
+    lumberjack
+  {
+     port => 5003
+     ssl_certificate => "/home/administrator/server.crt"
+     ssl_key => "/home/administrator/server.key"
+     type => "Firepower"
+  }
+  
+  
 }
 
 filter 
@@ -34,7 +65,8 @@ filter
             match => 
             [
             # IOS
-            "message", "<%{NUMBER:message_type_id}>%{NUMBER:internal_id}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}"
+            "message", "<%{NUMBER:message_type_id}>%{NUMBER:internal_id}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}",
+			"message", "<%{NUMBER:message_type_id}>%{NUMBER:Unknown_num}: %{NUMBER:internal_id}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}"
             ]
             overwrite => [ "message" ]
             add_tag => [ "cisco" ]
@@ -140,27 +172,17 @@ output {
     }
   }
 
-  # The message was parsed correctly, and should be sent to elasicsearch.
   if "cisco" in [tags] {
-    #file {
-    #  path => "/tmp/%{type}-%{+YYYY.MM.dd}.log"
-    #}
-
     elasticsearch {
       hosts => [ "127.0.0.1:9200" ]
       index           => "network-%{+YYYY.MM.dd}"
-    #  document_id     => "%{fingerprint}"
     }
   }
     if "asa" in [tags] {
-    #file {
-    #  path => "/tmp/%{type}-%{+YYYY.MM.dd}.log"
-    #}
 
     elasticsearch {
       hosts => [ "127.0.0.1:9200" ]
       index           => "firewall-%{+YYYY.MM.dd}"
-    #  document_id     => "%{fingerprint}"
     }
   }
 
