--- a/ELK/LogstashLumberjack.conf
+++ b/ELK/LogstashLumberjack.conf
@@ -1,16 +1,16 @@
 input 
 {
-  udp 
+  udp
   {
     port => "8514"
     type => "syslog-cisco"
   }
-  syslog
+  udp
   {
     type => "cisco-asa"
     port => "6514"
   }
-  tcp 
+  tcp
   {
     port => "8514"
     type => "syslog-cisco"
@@ -27,7 +27,15 @@ input
   }
 }
 
-
+filter 
+{
+  if [type] == "cisco-asa"
+  {
+  mutate {
+    add_field => { "hostname" => "F-CC-HP-1" }
+  }
+}
+}
 
 output 
 {
@@ -35,40 +43,44 @@ output
 	{
 		lumberjack 
 		{
-		hosts => [ "gesbeck.tk" ]
+		hosts => [ "elk.gesbeck.tk" ]
 		port => 5000
 		ssl_certificate => "c:\logstash\ca.cert"
-		ssl_ca_file => "c:\logstash\ca.cert"
+		#ssl_ca_file => "c:\logstash\ca.cert"
+		codec => "json"
 		}
 	}
 	if [type] == "cisco-asa" 
 	{
 		lumberjack 
 		{
-		hosts => [ "gesbeck.tk" ]
+		hosts => [ "elk.gesbeck.tk" ]
 		port => 5001
 		ssl_certificate => "c:\logstash\ca.cert"
-		ssl_ca_file => "c:\logstash\ca.cert"
-		}
+		#ssl_ca_file => "c:\logstash\ca.cert"
+		codec => "json"
+		}	
 	}
 	 if [type] == "meraki" 
 	{
 		lumberjack 
 		{
-		hosts => [ "gesbeck.tk" ]
+		hosts => [ "elk.gesbeck.tk" ]
 		port => 5002
 		ssl_certificate => "c:\logstash\ca.cert"
-		ssl_ca_file => "c:\logstash\ca.cert"
+		#ssl_ca_file => "c:\logstash\ca.cert"
+		codec => "json"
 		}
 	}
 		 if [type] == "Firepower" 
 	{
 		lumberjack 
 		{
-		hosts => [ "gesbeck.tk" ]
+		hosts => [ "elk.gesbeck.tk" ]
 		port => 5003
 		ssl_certificate => "c:\logstash\ca.cert"
-		ssl_ca_file => "c:\logstash\ca.cert"
+		#ssl_ca_file => "c:\logstash\ca.cert"
+		codec => "json"
 		}
 	}
 }
