--- a/ELK/ELK.conf
+++ b/ELK/ELK.conf
@@ -23,31 +23,35 @@ input
   lumberjack
   {
      port => 5000
-     ssl_certificate => "/home/administrator/server.crt"
-     ssl_key => "/home/administrator/server.key"
+     ssl_certificate => "/home/localadmin/server.crt"
+     ssl_key => "/home/localadmin/server.key"
      type => "syslog-cisco"
+	 codec => "json"
   }
   lumberjack
   {
      port => 5001
-     ssl_certificate => "/home/administrator/server.crt"
-     ssl_key => "/home/administrator/server.key"
+     ssl_certificate => "/home/localadmin/server.crt"
+     ssl_key => "/home/localadmin/server.key"
      type => "cisco-asa"
+	 codec => "json"
   }
   lumberjack
   {
      port => 5002
-     ssl_certificate => "/home/administrator/server.crt"
-     ssl_key => "/home/administrator/server.key"
+     ssl_certificate => "/home/localadmin/server.crt"
+     ssl_key => "/home/localadmin/server.key"
      type => "meraki"
+	 codec => "json"
   }
   
     lumberjack
   {
      port => 5003
-     ssl_certificate => "/home/administrator/server.crt"
-     ssl_key => "/home/administrator/server.key"
+     ssl_certificate => "/home/localadmin/server.crt"
+     ssl_key => "/home/localadmin/server.key"
      type => "Firepower"
+	 codec => "json"
   }
   
   
@@ -65,7 +69,7 @@ filter
             match => 
             [
             # IOS
-            "message", "<%{NUMBER:message_type_id}>%{NUMBER:internal_id}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}",
+            "message", "%{IPORHOST:sourceIP} <%{NUMBER:message_type_id}>%{NUMBER:internal_id}: %{IPORHOST:sourcehost}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}",
 			"message", "<%{NUMBER:message_type_id}>%{NUMBER:Unknown_num}: %{NUMBER:internal_id}:%{SPACE}%{CISCOTIMESTAMPZ:cisco_timestamp}: %{GREEDYDATA:log_message}"
             ]
             overwrite => [ "message" ]
@@ -114,41 +118,15 @@ filter
         grok 
         {
             match => ["message", "%{CISCO_TAGGED_SYSLOG} %{GREEDYDATA:cisco_message}"]
+			add_tag => [ "asa" ]
         }
         # Parse the syslog severity and facility
         syslog_pri { }
         # Extract fields from the each of the detailed message types
         # The patterns provided below are included in core of LogStash 1.2.0.
-        grok 
-        {
-            match => 
-            [
-                "cisco_message", "%{CISCOFW106001}",
-                "cisco_message", "%{CISCOFW106006_106007_106010}",
-                "cisco_message", "%{CISCOFW106014}",
-                "cisco_message", "%{CISCOFW106015}",
-                "cisco_message", "%{CISCOFW106021}",
-                "cisco_message", "%{CISCOFW106023}",
-                "cisco_message", "%{CISCOFW106100}",
-                "cisco_message", "%{CISCOFW110002}",
-                "cisco_message", "%{CISCOFW302010}",
-                "cisco_message", "%{CISCOFW302013_302014_302015_302016}",
-                "cisco_message", "%{CISCOFW302020_302021}",
-                "cisco_message", "%{CISCOFW305011}",
-                "cisco_message", "%{CISCOFW313001_313004_313008}",
-                "cisco_message", "%{CISCOFW313005}",
-                "cisco_message", "%{CISCOFW402117}",
-                "cisco_message", "%{CISCOFW402119}",
-                "cisco_message", "%{CISCOFW419001}",
-                "cisco_message", "%{CISCOFW419002}",
-                "cisco_message", "%{CISCOFW500004}",
-                "cisco_message", "%{CISCOFW602303_602304}",
-                "cisco_message", "%{CISCOFW710001_710002_710003_710005_710006}",
-                "cisco_message", "%{CISCOFW713172}",
-                "cisco_message", "%{CISCOFW733100}"
-            ]
-            add_tag => [ "ASA" ]
-        }
+        
+            
+   
         # Parse the date
         date 
         {
@@ -178,7 +156,7 @@ output {
       index           => "network-%{+YYYY.MM.dd}"
     }
   }
-    if "asa" in [tags] {
+  if "asa" in [tags] {
 
     elasticsearch {
       hosts => [ "127.0.0.1:9200" ]
