ELK and MDT Updates

--- a/ELK/ELK.conf
+++ b/ELK/ELK.conf
@@ -139,6 +139,24 @@ filter
         }
     }
     ###### End of Cisco FW #######
+	if [type] == "meraki"  {
+	grok 
+        {
+		match => 
+            [
+            "message", "<*>* %{BASE10NUM:epoch_time} %{WORD:Hostname} events content_filtering_block url=%{QUOTEDSTRING:URL} category0=%{QUOTEDSTRING:Category} server='%{IP:IP}:%{INT:Port}' client_mac='%{COMMONMAC:Client}'",
+			"message", "<*>* %{BASE10NUM:epoch_time} %{WORD:Hostname} urls src=%{IP:SourceIP}:%{INT:SourcePort} dst=%{IP:DestIP}:%{INT:DestPort} mac=%{COMMONMAC:Client} agent=%{QUOTEDSTRING:Agent} request: %{WORD:RequestType} %{URI:URL}",
+			"message", "<*>* %{BASE10NUM:epoch_time} %{WORD:Hostname} urls src=%{IP:SourceIP}:%{INT:SourcePort} dst=%{IP:DestIP}:%{INT:DestPort} mac=%{COMMONMAC:Client} request: %{WORD:RequestType} %{URI:URL}"
+			]
+		}
+	filter {
+  geoip {
+    DestIP => "clientip"
+  }
+}
+	}
+	
+	
 }
 
 
@@ -161,6 +179,13 @@ output {
     elasticsearch {
       hosts => [ "127.0.0.1:9200" ]
       index           => "firewall-%{+YYYY.MM.dd}"
+    }
+  }
+    if [type] == "meraki"  {
+
+    elasticsearch {
+      hosts => [ "127.0.0.1:9200" ]
+      index           => "meraki-%{+YYYY.MM.dd}"
     }
   }
 
