--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
 test_script:
   - ps: |
       Add-AppveyorTest -Name "PsScriptAnalyzer" -Outcome Running
-      $Results = Invoke-ScriptAnalyzer -Path $pwd -Recurse -Severity Error -ErrorAction SilentlyContinue
+      $Results = Invoke-ScriptAnalyzer -Path ($pwd.toString() + "\Scripts\Aberdean") -Recurse -Severity Error -ErrorAction SilentlyContinue
       If ($Results) {
         $ResultString = $Results | Out-String
         Write-Warning $ResultString
